--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 #hero{
-    background-image: url("images/giphy.webp");
+    background-image: url("giphy.webp");
     background-size: cover;
     padding: 10px 0 40px 0;
     text-shadow: 5px 5px 8px black;
